syntax = "proto3";

package hubrpc;

// Manager grpc service is used as an entry point for external optimisation
// subsystem to send the equilibrium state.
service Manager {
    //
    // SetState is used to change the local state of the
    rpc SetState (SetStateRequest) returns (SetStateResponse);
}

message SetStateRequest {
    // Time of the last sync with state of the router.
    uint64 time = 1;

    // Channels is the set of channels of local router lightning network.
    repeated Channel channels = 2;
}

message SetStateResponse {
    // TODO(andrew.shvv) Do we have to return how much it would cost router
    // to get to the desired state?
}

message Channel {
    uint64 user_id = 1;
    uint64 channel_id = 2;
    uint64 router_balance = 3;
}